tests/machine/x/hs/join_multi.error

/workspace/mochi/tests/machine/x/hs/join_multi.hs:177:1: error:
    Multiple declarations of ‘items’
    Declared at: /workspace/mochi/tests/machine/x/hs/join_multi.hs:36:37
                 /workspace/mochi/tests/machine/x/hs/join_multi.hs:177:1
    |
177 | items = [Map.fromList [("orderId", VInt (100)), ("sku", VString ("a"))], Map.fromList [("orderId", VInt (101)), ("sku", VString ("b"))]]
    | ^^^^^


Context around line 177:
  175| orders = [Map.fromList [("id", 100), ("customerId", 1)], Map.fromList [("id", 101), ("customerId", 2)]]
  176| 
  177| items = [Map.fromList [("orderId", VInt (100)), ("sku", VString ("a"))], Map.fromList [("orderId", VInt (101)), ("sku", VString ("b"))]]
  178| 
  179| result = [Map.fromList [("name", VString (fromMaybe (error "missing") (Map.lookup "name" c))), ("sku", VString (fromMaybe (error "missing") (Map.lookup "sku" i)))] | o <- orders, c <- customers, i <- items, (fromMaybe (error "missing") (Map.lookup "customerId" (o)) == fromMaybe (error "missing") (Map.lookup "id" (c))), (fromMaybe (error "missing") (Map.lookup "id" (o)) == fromMaybe (error "missing") (Map.lookup "orderId" (i)))]
